--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="col-12">
-        <textarea id="input">// Here's a little example
+        <textarea id="input">// Here's a stupid little example
 static long factorial(long n) {
   if (n == 1) {
     return 1;
@@ -46,6 +46,9 @@ System.out.println(factorial(20));</textarea>
       </div>
     </div>
   </div>
+  <a href="https://github.com/cs125-illinois/janini">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
+  </a>
 
   <!-- Bootstrap JavaScript dependencies -->
   <!-- Note that we need the non-slim jQuery to be able to issue post requests. -->
