--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -30,19 +30,12 @@
     <div class="row mt-5">
       <div class="col-12">
         <div id="output">
-          <pre>&gt; Hit Control-S to run your Java code...</pre>
+          <pre>&gt; Hit Control-Enter to run your Java code...</pre>
         </div>
       </div>
       <div class="col-12">
-        <textarea id="input">// Here's a stupid little example
-static long factorial(long n) {
-  if (n == 1) {
-    return 1;
-  } else {
-    return n * factorial(n - 1);
-  }
-}
-System.out.println(factorial(20));</textarea>
+        <textarea id="input">int x;
+System.out.println(x);</textarea>
       </div>
     </div>
   </div>
