Changes for interactive testing.

--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="col-12">
-        <textarea id="input">int x;
+        <textarea id="input">int x = 0;
 System.out.println(x);</textarea>
       </div>
     </div>
