Pin to version 8.

--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -45,8 +45,15 @@ System.out.println(x);</textarea>
         </div>
       </div>
       <div id="runClass" class="container col-12 input">
-        <textarea class="codemirror">int x = 0;
-System.out.println(x);</textarea>
+        <textarea class="codemirror">import java.util.ArrayList;
+public class Question {
+  public static void main(final String[] unused) {
+    ArrayList<String> list = new ArrayList<String>();
+    list.add("Geoffrey");
+    String working = list.get(0);
+    System.out.print(working);
+  }
+}</textarea>
       </div>
     </div>
   </div>
