Fix JSON property name mismatch

--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -46,7 +46,7 @@ System.out.println(x);</textarea>
       </div>
       <div id="runClass" class="container col-12 input">
         <textarea class="codemirror">import java.util.ArrayList;
-public class Question {
+public class Example {
   public static void main(final String[] unused) {
     ArrayList<String> list = new ArrayList<String>();
     list.add("Geoffrey");
